# parallel-jump-flooding-voronoi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/jfa/: cpu.hpp  exact.hpp  gpu.hpp  types.hpp  visualize.hpp
scripts/: README.md  exp_speedup_three_cases.py  plot_speedup.py  plot_threads_scaling.py  render_videos.py  run_benchmarks.py  run_experiments_median.py
src/apps/: jfa_bench.cpp  jfa_demo copy.cpp  jfa_demo.cpp
src/common/: jfa_visualize.cpp
src/cpu/: cpu_affinity.hpp  jfa_common_impl.hpp  jfa_openmp.cpp  jfa_serial.cpp  jfa_simd_avx2.cpp
src/exact/: voronoi_exact.cpp
src/gpu/: README.md  jfa_cuda.cu  jfa_gpu_wrapper.cpp
tests/: README.md
